--- a/thesis.bib
+++ b/thesis.bib
@@ -1,5 +1,5 @@
 @inproceedings{ Auger:2009:one_plus_one_ES,
-  title={Benchmarking the (1+ 1) evolution strategy with one-fifth success rule on the BBOB-2009 function testbed},
+  title={Benchmarking the (1+1) evolution strategy with one-fifth success rule on the BBOB-2009 function testbed},
   author={Auger, Anne},
   booktitle={Proceedings of the 11th Annual Conference Companion on Genetic and Evolutionary Computation Conference: Late Breaking Papers},
   pages={2447--2452},
@@ -59,20 +59,21 @@
 @article{ Clerc:2012:SPSO2011,
 	title={Standard particle swarm optimisation},
   	author={Clerc, Maurice},
+	journal={Online at https://hal.archives-ouvertes.fr/hal-00764996/},
   	year={2012}
 }
 
 @article{ Clerc:2007:randomTopology,
 	title={Back to random topology},
 	author={Clerc, Maurice},
-  	journal={Relat{\'o}rio T{\'e}cnico, mar},
-  	year={2007}
+	journal={Online at http://clerc. maurice. free. fr/pso},
+	year={2007}
 }
 
 @inproceedings{ Zambrano:2013:SPSO2011,
   title={Standard particle swarm optimisation 2011 at cec-2013: A baseline for future pso improvements},
   author={Zambrano-Bigiarini, Mauricio and Clerc, Maurice and Rojas, Rodrigo},
-  booktitle={Evolutionary Computation (CEC), 2013 IEEE Congress on},
+  booktitle={Evolutionary Computation, 2013. The 2013 IEEE Congress on},
   pages={2337--2344},
   year={2013},
   organization={IEEE}
@@ -81,7 +82,7 @@
 @inproceedings{ Dorigo:1999:ACO,
     author = {Dorigo, Marco and Di Caro, Gianni},
     title = {Ant colony optimization: a new meta-heuristic},
-    booktitle = {Evolutionary Computation, 1999. CEC 99. Proceedings of the 1999 Congress on},
+    booktitle = {Evolutionary Computation, 1999. The 1999 IEEE Congress on},
     volume={2},
     year = {1999},
     pages = {1470--1477},
@@ -201,7 +202,7 @@
 }
 
 @article{ Suganthan:2005:benchmark,
-    author={Suganthan, Ponnuthurai N and Hansen, Nikolaus and Liang, Jing J and Deb, Kalyanmoy and Chen, Ying-Ping and Auger, Anne and Tiwari, Santosh},
+    author={Suganthan, Ponnuthurai N and Hansen, Nikolaus and Liang, Jing J and Deb, Kalyanmoy and Chen, Ying-ping and Auger, Anne and Tiwari, Santosh},
     title={Problem definitions and evaluation criteria for the CEC 2005 special session on real-parameter optimization},
     journal={KanGAL report},
     volume={2005005},
