--- a/multi-armed_bandit_algorithms.tex
+++ b/multi-armed_bandit_algorithms.tex
@@ -109,7 +109,7 @@ Let $m_i$ be the one of the possible models in the arm.
 Let $D$ be the model of all the observed data.
 The we define the probability of not being able to acquire the best point given a set of observed data as:
 \begin{equation}
-P(r|D) = \sum_{i} P(r|D, m_i)P(m_i|D) = \sum_{i}P(r|m_i)P(m_i|D) 
+P(r|D) = \sum_{i} P(r|D, m_i)P(m_i|D) = \sum_{i}P(r|m_i)P(m_i|D).
 \end{equation}\label{equation:bandit}
 Therefore, we would like find a remain evaluation allocation that gives a minimum probability of not being able to aquire the best point.
 
@@ -119,7 +119,7 @@ Therefore, we would like find a remain evaluation allocation that gives a minimu
 \caption{Probability of regret.}\label{fig:Bandit_arm}
 \end{figure} 
 
-In order to calculate $P(r|D)$, we need to calculate all possible models for a arm with given rank, 
+In order to calculate $P(r|D)$, we need to calculate all possible models for an arm with given rank, 
 total number of points in the search space, and the number of remain evaluations, 
 as shown in Figure~\ref{fig:Bandit_arm}.
 The indigo area represents the observed model $D$, 
@@ -131,7 +131,7 @@ That is why there are two possible positions on the top and two on the bottom of
 If the acquired fitness is between the current best and worst particle, 
 than the rank would only exchange with another particle in one of the arms,
 so no more ``holes'' than the current ranks are needed.
-We can find $12$ possible models that matches the current observation, i.e. rank $1$ is included.
+We can find $12$ possible models that matches the current observation, \textit{i.e.} rank $1$ is included.
 Therefore, only $4$ out of the $12$ models are possible to acquire the best rank.
 We assume the model is uniformly distributed, that is, acquiring different ranks share the same possibility.
 We also assume that all models have the same probability to be chosen with the observed data model $D$.
@@ -153,7 +153,7 @@ For example, if we decide to invest both of the remaining evaluations on the fir
 then the probability of not acquiring the best model for the right most model would be $P(r|m_i) = (5/6)^2$,
 while the probability for choosing that model is still $P(m_i|D) = 1/12$.
 Therefore, we can calculate the probability of regret as illustrated in Figure~\ref{fig:Bandit_regret}.
-After calculate the probability of regret all possible combinations, i.e. [2,0], [1,1], [0,2], 
+After calculate the probability of regret all possible combinations, \textit{i.e.} [2,0], [1,1], [0,2], 
 we select the evaluation allocation model with the minimum regret.
 In this case, it is to invest all the remaining evaluations on the first cluster.
 This result satisfies our assumption that in the end with few evaluations left, 
